# sdl2mummy

./: .gitignore  README.md
assets/: sprites.json
sources/SDL_image/: CMakeLists.txt
sources/src/: CMakeLists.txt  animation.cpp  animation.hpp  framedata.hpp  game.cpp  game.hpp  gamecontext.hpp  icreateobjectnotificable.hpp  imapnotificable.hpp  itemobject.cpp  itemobject.hpp  main.cpp  mummy.cpp  mummy.hpp  player.cpp  player.hpp  playstate.cpp  playstate.hpp  spritesheet.cpp  spritesheet.hpp  stage.cpp  stage.hpp  timer.cpp  timer.hpp  tomb.cpp  tomb.hpp  trace.cpp  trace.hpp  utils.cpp  utils.hpp
